tests/regression/errors/basic/type_error_7.csd
// Type error test 7
sus number drip = 7
sus text tea = "string_7"
sus wrong drip = text  // Type mismatch
vibez.spill("Type error 7:", wrong)
